...
 
    
    @IBAction func addButtonPressed(_ sender: UIBarButtonItem) {

        var textField = UITextField()
        
        let alert = UIAlertController(title: "Добавление клиента", message: "", preferredStyle: .alert)
        
        let action = UIAlertAction(title: "Add", style: .default) { (action) in
            
            let newClient = Clients()
            newClient.name = textField.text!
            newClient.colour = UIColor.randomFlat().hexValue()
...
            (alertAction: UIAlertAction!) in
            alert.dismiss(animated: true, completion: nil)
        }))
        
        alert.addTextField { (field) in
            textField = field
            textField.placeholder = "Введите имя"
        }
        
        present(alert, animated: true, completion: nil)
        
       tableView.reloadData()
    }
...
