...
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="LwL-ex-0cS"/>
                    </view>
                    <navigationItem key="navigationItem" title="App Launch screen" largeTitleDisplayMode="never" id="kUJ-wu-OMp"/>
                    <connections>
                        <segue destination="HRt-Wl-BUM" kind="show" identifier="logged" id="eDA-eo-o3o"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="U5B-Tp-TY1" sceneMemberID="firstResponder"/>
            </objects>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="j2b-81-nF4" id="sou-Do-fUl"/>
                            <outlet property="delegate" destination="j2b-81-nF4" id="xae-HY-c86"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Все клиенты" id="n3h-ve-qYd">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="hCv-ba-u2p">
                            <connections>
                                <action selector="addButtonPressed:" destination="j2b-81-nF4" id="g0k-pC-K2p"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
